# coord

./: .gitignore  pyproject.toml
scripts/: clean_sentences.py  extract_coordinations.py  sentences_split.py  split_and_export_sentences.py
src/coord/: main.py  syll.py
src/coord/tools/: __init__.py  extract.py  sentences.py  syllables.py
src/coord/utils/: cleaning.py  data.py  other.py
