[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coord"
version = "0.0.1"
authors = [
	{ name = "Adam Głowacki", email = "am.glowacki@student.uw.edu.pl" },
]
description = "dlm project"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
	"Programming Language :: Python :: 3",
	"Operating System :: OS Independent",
]

[project.urls]
"Homepage" = ""
